--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -116,13 +116,22 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
+
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -145,7 +154,10 @@
             </nav>
           </div>
         </header>
-        <div class="about-home" style="background: url('../assets/projects/advancedtech.jpg');">
+        <div
+          class="about-home"
+          style="background: url('../assets/projects/advancedtech.jpg')"
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -221,7 +233,8 @@
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
-                      class="lower-content-img" style="border-radius: 20px;"
+                      class="lower-content-img"
+                      style="border-radius: 20px"
                       src="https://img.freepik.com/free-vector/virtual-reality-friends-cartoons_18591-52210.jpg?size=626&ext=jpg&uid=R75365823&ga=GA1.1.1388913245.1697904651&semt=ais"
                       alt=""
                     />
@@ -255,12 +268,17 @@
               <div class="widget-content">
                 <h6>Services List</h6>
                 <ul class="service-list-tab">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -328,12 +346,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -419,9 +442,7 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
 
             <li><a href="./softwaredev.html">Software Development</a></li>
@@ -434,10 +455,12 @@
             </li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Career</a></li>
-        
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
