--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img id="logo-image" src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -113,11 +113,21 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
+
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
                   <li>
                     <a
@@ -145,7 +155,12 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div
+          class="about-home"
+          style="
+            background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+          "
+        >
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -187,17 +202,36 @@
               <div class="img-content-inner">
                 <div class="img-contents">
                   <div class="about-counter">
-                    <h3>+12k</h3>
+                    <h3><20+></h3>
                     <p>Our Active Member</p>
                   </div>
-                  <div class="about-3-img">
-                    <img class="about-3" src="../assets/about/about-3.jpg" />
+                  <div
+                    class="about-3-img"
+                    style="width: 300px; height: 300px; overflow: hidden"
+                  >
+                    <img
+                      class="about-3"
+                      src="https://images.unsplash.com/photo-1521737711867-e3b97375f902?auto=format&fit=crop&q=80&w=1974&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                      style="padding: 10px; border-radius: 40px"
+                    />
                   </div>
                 </div>
                 <div class="img-contents">
-                  <div class="about-4-img">
+                  <div
+                    class="about-4-img"
+                    style="
+                      width: 500px;
+                      height: 225px;
+                      overflow: hidden;
+                      border-radius: 0px !important;
+                    "
+                  >
                     <div class="about-img-hover"></div>
-                    <img class="about-4" src="../assets/about/about-4.jpg" />
+                    <img
+                      class="about-4"
+                      src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                      style="border-radius: 0px"
+                    />
                   </div>
                 </div>
               </div>
@@ -281,6 +315,14 @@
                 <i class="fa-solid fa-screwdriver-wrench"></i>
                 <h6>Advisory</h6>
               </div>
+              <div id="AppDev" class="grid-item">
+                <i class="fa-brands fa-app-store"></i>
+                <h6>App Development</h6>
+              </div>
+              <div id="Brand" class="grid-item">
+                <i class="fa-solid fa-code-branch"></i>
+                <h6>Branding</h6>
+              </div>
             </div>
           </div>
         </div>
@@ -307,12 +349,16 @@
                     <img src="../assets/teams/nithya.jpeg" alt="" />
                   </div>
                   <div class="quote-text">
-                    Classes were so good and understanding. Very very supportive & helping faculties, they are out there to clear all our doubts.I would like to suggest scipy technologies to all my friends and colleagues...I just loved the friendly atmosphere out there... I am so thankful to the Scipy team.
+                    Classes were so good and understanding. Very very supportive
+                    & helping faculties, they are out there to clear all our
+                    doubts.I would like to suggest scipy technologies to all my
+                    friends and colleagues...I just loved the friendly
+                    atmosphere out there... I am so thankful to the Scipy team.
                   </div>
                 </div>
                 <div class="lower-part">
                   <h6>Nithya Rajendran</h6>
-                  <div class="quote-div">Software Developer | saasvaap</div> 
+                  <div class="quote-div">Software Developer | saasvaap</div>
                 </div>
               </div>
             </div>
@@ -326,7 +372,11 @@
                     <img src="../assets/teams/chinju.jpg" alt="" />
                   </div>
                   <div class="quote-text">
-                    If you are looking for a place to develop your skill and your dream job, here you are.. you reached your right destination. I have an awesome experience in SciPy Technologies during my internship. Amazing atmosphere and supportive staff members.
+                    If you are looking for a place to develop your skill and
+                    your dream job, here you are.. you reached your right
+                    destination. I have an awesome experience in SciPy
+                    Technologies during my internship. Amazing atmosphere and
+                    supportive staff members.
                   </div>
                 </div>
                 <div class="lower-part">
@@ -345,12 +395,18 @@
                     <img src="../assets/teams/vargees.jpg" alt="" />
                   </div>
                   <div class="quote-text">
-                    SciPY is one of the best development teams I’ve worked with. The quality of work is excellent and their communication skills are top notch. Highly motivating members. I highly recommend this development team and will be working with them again!
+                    SciPY is one of the best development teams I’ve worked with.
+                    The quality of work is excellent and their communication
+                    skills are top notch. Highly motivating members. I highly
+                    recommend this development team and will be working with
+                    them again!
                   </div>
                 </div>
                 <div class="lower-part">
                   <h6>Varghese</h6>
-                  <div class="quote-div">Software Developer | Capgemini India</div>
+                  <div class="quote-div">
+                    Software Developer | Capgemini India
+                  </div>
                 </div>
               </div>
             </div>
@@ -470,6 +526,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -558,6 +616,8 @@
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
@@ -615,6 +675,17 @@
 
       featuresAdvi.addEventListener("click", () => {
         window.location.href = "./advisory.html";
+      });
+
+      const featuresApp = document.getElementById("AppDev");
+
+      featuresApp.addEventListener("click", () => {
+        window.location.href = "./appdev.html";
+      });
+      const featuresBrand = document.getElementById("Brand");
+
+      featuresBrand.addEventListener("click", () => {
+        window.location.href = "./branding.html";
       });
     </script>
     <script
