--- a/pages/appdev.html
+++ b/pages/appdev.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/projects.css" />
+    <link rel="stylesheet" href="../css/softwaredev.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -32,13 +32,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="odometer-theme-car.css" />
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy | Projects</title>
+    <title>SciPy | Advisory</title>
   </head>
   <body>
     <div class="sidebar-closer"></div>
@@ -50,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -61,7 +65,8 @@
                   <li class="dropdown">
                     <a
                       href="#"
-                      class=".main-a"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
                       >Services</a
                     >
                     <ul class="services-list">
@@ -111,21 +116,22 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="../index.html" class=".main-a">Technologies</a>
-                  </li>
+                  
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  <li>
-                    <a
-                      href="./projects.html"
-                      class="active-link home-color .main-a"
-                      href="#"
-                      style="color: #0092ff"
-                      >Project</a
-                    >
-                  </li>
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -174,118 +180,138 @@
           </div>
           <div class="auto-container">
             <div class="page-title">
-              <h1 class="title-abt">Projects</h1>
+              <h1 class="title-abt">App Development</h1>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><p class="page-about">Projects</p></li>
+                <li><p class="page-about">App Development</p></li>
               </ul>
             </div>
           </div>
         </div>
       </section>
-      <section class="projects-one">
+      <section class="main-page">
         <div class="auto-container">
-          <div class="projects-row row clearfix">
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
+          <div class="content-row">
+            <div class="content-col">
+              <img
+                class="main-img"
+                src="../assets/projects/project-1.jpg"
+                alt=""
+              />
+              <div class="lower-content">
+                <h3>Advisory</h3>
+                <p>
+                  We provide expert and unique Software Development Service for
+                  the needs that are specifically fro industrial trens and
+                  upcomming market. Enchance Business growth and conques market
+                  with interative web and mobile solution We are effective in
+                  next generation enterprise application on the web,Mobile and
+                  desktop to modernized business process and enhance customes
+                  experience. Extensive Product Development Services across
+                  software development life cycle. We provide persistent product
+                  development service to help you stay competitive in the market
+                </p>
+                <p>
+                  Customize the trend that are widely in our networks, design
+                  custom web application that meets all the challenge in
+                  business. We provide you
+                  secure,intractive,responive,elagant,sleek and fully customized
+                  UI/UX
+                </p>
+                <h6>Our Success JOURNEY We can Provide.</h6>
+                <p>
+                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
+                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
+                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
+                  rutrum lectus vel est pulvinar in scelerisque purus.
+                </p>
+                <div class="lower-content-row">
+                  <div class="lower-content-col">
+                    <img
+                      class="lower-content-img"
+                      src="../assets/projects/project-2.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="lower-content-col">
+                    <h6>
+                      It consultancy and It services to Join Work Our company?
+                    </h6>
+                    <p>
+                      Nulla facilisi. Nullam congue, tortor id finibus pose,
+                      risus magna convallis massa, sit amet gravida est tellus
+                      vitae dui. Proin hendrerit.
+                    </p>
+                    <ul class="service-list-content">
+                      <li>One-time security check fee: $99.95</li>
+                      <li>One-time security check fee: $99.95</li>
+                      <li>One-time security check fee: $99.95</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
+            <div class="content-col">
+              <div class="widget-content">
+                <h6>Search Here</h6>
+                <div class="search-input">
+                  <input type="search" placeholder="Enter Your Keyword..." />
+                  <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
               </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
+              <div class="widget-content">
+                <h6>Services List</h6>
+                <ul class="service-list-tab">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
+                  <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
+                </ul>
               </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
+              <div class="widget-content">
+                <h6>Social Icon</h6>
+                <ul class="social-icons-tab">
+                  <li>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </li>
+                  <li>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                  </li>
+                </ul>
               </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
+              <div class="widget-content">
+                <h6>Brochure</h6>
+                <ul class="Brochure-tab">
+                  <li>
+                    <a href="#"
+                      ><i class="fa-regular fa-file"></i> Brochure.doc
+                      <span>80kb</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="#"
+                      ><i class="fa-regular fa-file-pdf"></i> Brochure.pdf
+                      <span>80kb</span></a
+                    >
+                  </li>
+                </ul>
               </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="projects-col col-lg-4 col-md-6 col-sm-12">
-              <div class="projects">
-                <img src="../assets/projects/projects-page.jpg" alt="" />
-                <div class="projects-overlay">
-                  <a href="#">
-                    <img src="../assets/Icons/eye.svg" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="project_pages">
-            <div class="project-nums">
-              <a href="#"><i class="fa-solid fa-arrow-left" style="margin: 0px;"></i></a>
-              <div class="nums">
-              <a href="#">01</a>
-              <a href="#">02</a>
-              <a href="#">03</a>
-              </div>
-              <a href="#"><i class="fa-solid fa-arrow-right m-0"></i></a>
             </div>
           </div>
         </div>
@@ -314,12 +340,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -328,8 +359,7 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="./careers.html">career</a></li>
-                  <li><a href="./projects.html">Project</a></li>
+                  <li><a href="./careers.html">Career</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -384,43 +414,55 @@
       </div>
       <ul class="sidebar-menu">
         <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li>
-          <a id="toggle-service" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a id="home-sidebar" href="../index.html">Home</a>
+        </li>
+        <li>
+          <a
+            id="toggle-service"
+            href="#"
+            style="color: #fff; background-color: #0092ff"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
             <li>
-              <a href="./pages/websitedev.html" data-page="Service1"
+              <a href="./websitedev.html" data-page="Service1"
                 >Website Development</a
               >
             </li>
             <li>
-              <a href="./pages/digitalmarket.html" data-page="Service1"
+              <a href="./digitalmarket.html" data-page="Service1"
                 >Digital Marketing</a
               >
             </li>
             <li>
-              <a href="./pages/erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
-            <li><a href="./advisory.html">Advisory</a></li>
+            <li>
+              <a href="./advisory.html">Advisory</a>
+            </li>
+            <li>
+              <a
+                href="./appdev.html"
+                style="color: #fff; background-color: #0092ff"
+                >App Development</a
+              >
+            </li>
+            <li>
+              <a href="./branding.html">Branding</a>
+            </li>
           </ul>
         </li>
-        <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html" style="color: #fff; background-color: #0092ff">Projects</a></li>
+        <li><a href="./careers.html">Career</a></li>
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
     </div>
     <script src="../js/Sidebarcollapse.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
