--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,7 +50,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -107,15 +107,23 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
 
                   <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  <li>
-                    <a href="./projects.html" class=".main-a" href="#"
-                      >Project</a
-                    >
-                  </li>
+                  
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -142,7 +150,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('https://images.unsplash.com/photo-1590935217281-8f102120d683?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-position: top top;">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -191,12 +199,12 @@
           <div class="contact-row">
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="../assets/contacts/1.jpg" alt="" />
+                <img src="../assets/contacts/webdevsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">Website Development</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -211,12 +219,12 @@
             </div>
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="../assets/contacts/1.jpg" alt="" />
+                <img src="../assets/contacts/digitalsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">Digital Marketing</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -231,12 +239,12 @@
             </div>
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="../assets/contacts/1.jpg" alt="" />
+                <img src="../assets/contacts/erpsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">ERP Solutions</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -349,12 +357,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -444,6 +457,8 @@
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
