--- a/pages/erppage.html
+++ b/pages/erppage.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -116,15 +116,25 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li>
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  <li>
-                    <a href="./projects.html" class=".main-a">Projects</a>
-                  </li>
+                  
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
@@ -319,6 +329,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -394,6 +406,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -492,6 +506,8 @@
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Brandung</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
