--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -114,6 +114,18 @@
                         <a href="./advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
                         >
                       </li>
                     </ul>
