--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -114,6 +114,18 @@
                         <a href="./advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
                         >
                       </li>
                     </ul>
@@ -263,7 +275,7 @@
                   skilled developers has extensive experience in creating
                   cutting-edge web applications using this technology stack.
                   Whether you need a simple, elegant website or a complex,
-                  feature-rich web application, we've got you covered. <br>
+                  feature-rich web application, we've got you covered. <br />
                   <b>Our MERN Stack development services include:</b>
                   <br /><br />
                   - <b>Custom Web Application Development :</b> We tailor web
@@ -283,8 +295,16 @@
                   we're here to help you make informed decisions. <br />
                 </p>
                 <div class="lower-content-row">
-                  <div class="lower-content-col webdevimage2" style="overflow: hidden; width: 370px; height: 360px;">
-                    <img style="overflow: hidden; border-radius: 20px; aspect-ratio: 1/1;"
+                  <div
+                    class="lower-content-col webdevimage2"
+                    style="overflow: hidden; width: 370px; height: 360px"
+                  >
+                    <img
+                      style="
+                        overflow: hidden;
+                        border-radius: 20px;
+                        aspect-ratio: 1/1;
+                      "
                       class="lower-content-img"
                       src="../assets/projects/webdev_image.jpg"
                       alt=""
@@ -328,6 +348,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -403,6 +425,8 @@
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -478,7 +502,7 @@
           ></a>
           <ul id="menu" class="toogle-ul">
             <li>
-              <a href="./websitedev.html" data-page="Service1"
+              <a href="./websitedev.html" data-page="Service1" style="color: #fff; background-color: #0092ff"
                 >Website Development</a
               >
             </li>
@@ -493,13 +517,15 @@
             <li>
               <a
                 href="./softwaredev.html"
-                style="color: #fff; background-color: #0092ff"
+                
                 >Software Development</a
               >
             </li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Branding</a></li>
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
