--- a/pages/careers.html
+++ b/pages/careers.html
@@ -54,7 +54,7 @@
         <header id="header" class="navigation-menu">
           <div class="auto-container">
             <nav class="nav-bar">
-              <div class="logo">
+              <div class="logo" id="logo">
                 <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
@@ -113,6 +113,18 @@
                           ><span class="text-span">Advisory</span></a
                         >
                       </li>
+                      <li>
+                        <a href="./appdev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">App Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./branding.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Branding</span></a
+                        >
+                      </li>
                     </ul>
                   </li>
                   <li>
@@ -133,7 +145,7 @@
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="./contact.html"
+                    <a id="Contact-us" class="" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -151,7 +163,7 @@
             </nav>
           </div>
         </header>
-        <div class="about-home">
+        <div class="about-home" style="background: url('https://img.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg?w=1800&t=st=1698897804~exp=1698898404~hmac=1a63349224f78f6062c7c83ab83093eb42a8252831d36776aab4d20c0865919e');">
           <div class="header-top">
             <div class="auto-container">
               <div class="header-top-menu">
@@ -200,10 +212,10 @@
           <div
             class="d-flex justify-content-center align-items-center flex-column"
           >
-            
             <div class="Projects-div">
               <ul class="Projects-list">
-                <li><a href="#">Stock Data Analysis</a></li>
+                <li><a href="#">LLM</a></li>
+
                 <li>
                   <a href="#">Medical Image Analysis & Feature Extraction</a>
                 </li>
@@ -215,7 +227,8 @@
                 <li>
                   <a href="#">Skin ACNE Analysis & Real time Identification</a>
                 </li>
-                <li><a href="#">LLM</a></li>
+                <li><a href="#">Stock Data Analysis</a></li>
+
                 <li><a href="#">Auto Scientific name from Image Search</a></li>
                 <li><a href="#">Malayalam Speech Generation App</a></li>
                 <li><a href="#">Image Enchance App</a></li>
@@ -517,12 +530,17 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
                     <a href="./maintenance.html">Maintenance and Support</a>
                   </li>
                   <li><a href="./advisory.html">Advisory</a></li>
+                  <li><a href="./appdev.html">App Development</a></li>
+                  <li><a href="./branding.html">Branding</a></li>
                 </ul>
               </div>
             </div>
@@ -531,8 +549,7 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="../index.html">Services</a></li>
-                  <li><a href="../index.html">Technologies</a></li>
+                  <li><a href="./careers.html">Career</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -610,13 +627,15 @@
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
             <li><a href="./advisory.html">Advisory</a></li>
+            <li><a href="./appdev.html">App Development</a></li>
+            <li><a href="./branding.html">Brnading</a></li>
           </ul>
         </li>
         <li>
           <a
             href="./careers.html"
             style="color: #fff; background-color: #0092ff"
-            >Careers</a
+            >Career</a
           >
         </li>
 
